# superloopy

./: .gitignore  DESIGN.md  README.es.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  installation.md  legacy-agent-manifests.json  model-policy.json  package-lock.json  package.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.codex/agents/: franky.toml  fronk.toml  jinbe.toml  jumbo.toml  nami.toml  nomi.toml  robin.toml  rovyn.toml  usk.toml  usopp.toml  zoro.toml  zyro.toml
.github/workflows/: hol-plugin-scanner.yml  test.yml
agents/: franky.md  jinbe.md  nami.md  robin.md  usopp.md  zoro.md
docs/: loopy-crew-lines.md  loopy-design-audit.md  loopy-file-audit.md  loopy-gate-notes.md  loopy-host-contract.md  loopy-loop-golden-set.md  loopy-model-policy.md  superloopy-claude-validation.md  superloopy-design-audit.md  superloopy-file-audit.md  superloopy-gate-notes.md  superloopy-host-contract.md  superloopy-interop-superpowers.md  superloopy-loop-golden-set.md  superloopy-model-policy-claude.md  superloopy-model-policy.md
docs/superpowers/plans/: 2026-07-01-humanize-korean-superloopy.md  2026-07-07-astro-landing.md  2026-07-10-automatic-upgrade-migration.md  2026-07-10-explicit-frontend-activation.md  2026-07-10-gpt-5-6-model-resolution.md  2026-07-10-gpt-5-6-routing-hardening.md  2026-07-11-qt-frontend-support.md  2026-07-11-qt-kanban-demo.md  2026-07-11-qt-kanban-qa-and-handoff.md  2026-07-24-workspace-safety-continuity.md
docs/superpowers/specs/: 2026-07-07-astro-landing-design.md  2026-07-10-automatic-upgrade-migration-design.md  2026-07-10-explicit-frontend-activation-design.md  2026-07-10-gpt-5-6-model-policy-design.md  2026-07-10-qt-frontend-support-design.md  2026-07-11-qt-kanban-demo-design.md  2026-07-24-workspace-context-steering-compaction-design.md
examples/qt-kanban/: CMakeLists.txt  DESIGN.md
examples/qt-kanban/scripts/: audit-macos-accessibility.sh  capture-macos.sh
examples/qt-kanban/src/Northstar/Kanban/: BoardView.qml  CMakeLists.txt  DetailDrawer.qml  DragTaskVisual.qml  KanbanColumn.qml  KanbanHeader.qml  KanbanView.qml  Main.qml  NewTaskDialog.qml  Sidebar.qml  TaskCard.qml  TaskStore.qml  Theme.qml
examples/qt-kanban/src/app/: CMakeLists.txt  main.cpp
examples/qt-kanban/tests/quick/: CMakeLists.txt  tst_accessibility.qml  tst_card.qml  tst_drag.qml  tst_interactions.qml  tst_qtkanban.cpp  tst_responsive.qml  tst_smoke.qml  tst_store.qml  tst_theme.qml
examples/qt-widgets-identities/: CMakeLists.txt  DESIGN.md
examples/qt-widgets-identities/src/: IdentityPresentation.cpp  IdentitySystem.cpp  IdentitySystem.h  SignalBenchGallery.cpp  SignalBenchWindow.cpp  SignalBenchWindow.h  main.cpp
examples/qt-widgets-identities/tests/: tst_signalbench.cpp
hooks/: hooks.json  pre-tool-use.json  session-start.json  stop.json  subagent-stop-audit.json  subagent-stop.json  user-prompt-submit.json
scripts/: serve-web.mjs  sync-version.mjs
skills/humanize-korean/: SKILL.md
skills/loopy-clone/: SKILL.md
skills/loopy-clone/agents/: openai.yaml
skills/loopy-loop/: SKILL.md
skills/loopy-research/: SKILL.md
skills/superloopy-clone/: SKILL.md
skills/superloopy-doctor/: SKILL.md
skills/superloopy-frontend/: SKILL.md
skills/superloopy-loop/: SKILL.md
skills/superloopy-research/: SKILL.md
skills/superloopy-slides/: SKILL.md
skills/superloopy-video/: SKILL.md
src/: agent-names.js  agents.js  args.js  artifacts.js  audit-gate-verify.js  audit-hooks.js  audit-verdict.js  audit.js  auto-update-state.js  auto-update.js  begin.js  capture.js  check.js  cli.js  compaction-recovery.js  comparison-similarity.js  context-cost.js  continuation.js  crew-lines.js  design-audit.js  doctor-skills.js  doctor.js  engineer.js  file-audit.js  finish.js  fleet.js  goals.js  guide.js  help.js  hooks.js  installed-model-policy.js  installed-plugin-truth.js  interop.js  legacy-agents.js  loop.js  managed-agents.js  matrix-gate.js  model-catalog.js  model-policy.js  model-resolution.js  (+17 more)
test/: audit.test.js  auto-update.test.js  claude-host-wiring.test.js  cli-evidence.test.js  cli.test.js  compaction-recovery.test.js  concurrency.test.js  context-cost.test.js  crew-lines.test.js  docs.test.js  doctor-packed.test.js  doctor-review-feedback.test.js  doctor.test.js  ds-compliance.test.js  engineer.test.js  file-audit.test.js  fleet.test.js  frame-qa.test.js  frontend-qt-contract.test.js  frontend-quality-overlays.test.js  frontend-routing-scenarios.test.js  frontend-ux-contract.test.js  frontend-ux-semantics.test.js  goals.test.js  golden-audit-hooks.test.js  golden-audit-verdict.test.js  golden-audit.test.js  golden-continuation.test.js  golden-helpers.js  golden-hooks.test.js  golden-matrix-gate.test.js  golden-review-gate.test.js  golden-scoped-target-platforms.test.js  hooks.test.js  host-adapter.test.js  humanize-korean.test.js  installed-model-policy.test.js  installed-plugin-truth.test.js  interop.test.js  legacy-agent-migration.test.js  (+18 more)
test/helpers/: trust-isolate.js
web/: README.md  _headers  _payload.json  index.html  loopy-copy.js  site.webmanifest
web-superloopy/: README.md  astro.config.mjs  package-lock.json  package.json
web-superloopy/public/: _headers  _payload.json  orbit.html
web/_nuxt/: B3ZW860h.js  B_u25p9U.js  Bxf0_WhZ.js  Cw6SDRPZ.js  KkTQbRs5.js  LogoTile.B-K2MDYy.css  legal-notice.Czn4C2L1.css  ty4JC5yh.js  w4_qzAi3.js
(+66 files in other folders)
